<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_color_picker"
        android:title="@string/palette"
        android:icon="@drawable/palette_icon" />

    <item
        android:id="@+id/navigation_brush_picker"
        android:title="@string/brush"
        android:icon="@drawable/brush_icon"
        />

    <item
        android:id="@+id/navigation_undo"
        android:title="@string/undo"
        android:icon="@drawable/ic_baseline_undo_24"
        />
    <item
        android:id="@+id/navigation_load"
        android:title="@string/load"
        android:icon="@drawable/ic_baseline_image_24"
        />
    <item
        android:id="@+id/navigation_save"
        android:title="@string/save"
        android:icon="@drawable/ic_baseline_save_24"
        />
</menu>